@@ -237,6 +237,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #25951: Change SSLSocket.sendall() to return None, as explicitly
+  documented for plain socket objects.  Patch by Aviv Palivoda.
+
 - Issue #26586: In http.server, respond with "413 Request header fields too
   large" if there are too many header fields to parse, rather than killing
   the connection and raising an unhandled exception.  Patch by Xiang Zhang.
